add pdf endpoint.
